# flwrlabs-quickstart-pytorch-usps

./: .pre-commit-config.yaml  Dockerfile.jupyterlab  README.md  compose.yml  config.toml
quickstart-pytorch-usps/: pyproject.toml
quickstart-pytorch-usps/pytorchexample/: server_app.py  task.py
